# BookWriter

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GIT_GUIDE.md  INICIO_RAPIDO.md  LICENSE  README.md  README_TUTORIAL.md  config.example  docker-compose.yml  exemplos_uso.md  init.sql  project.toml  setup_database.sh  test_api.sh  test_auth.sh  test_books.sh
.github/workflows/: ci.yml
src/: database.rs  main.rs  models.rs
src/handlers/: auth.rs  books.rs  mod.rs  users.rs
src/models/: book.rs
templates/: books.html.hbs  dashboard.html.hbs  index.html.hbs  login.html.hbs  register.html.hbs
